<resources>
    <string name="app_name">My First Application</string>
    <string name="text_button1">Text button1</string>
    <string name="text_button2">Text button2</string>
    <string name="text_button3">Text button3</string>
    <string name="text_button4">Text button4</string>
    <string name="text_button5">Text button5</string>
    <string name="textview">TextView</string>
    <string name="Frag_1" />
    <string name="frag_1">Frag_1</string>
    <string name="frag_2">Frag_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>