<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/textButton1"
        style="@style/ButtonTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/textButton2"
        style="@style/ButtonTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton1"/>

    <Button
        android:id="@+id/textButton3"
        style="@style/ButtonTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton2"/>

    <Button
        android:id="@+id/textButton4"
        style="@style/ButtonTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton3"/>

    <Button
        android:id="@+id/textButton5"
        style="@style/ButtonTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton4"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButton5" />

</androidx.constraintlayout.widget.ConstraintLayout>